# pulse

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  release.yml
crates/pulse-bench/: Cargo.toml
crates/pulse-bench/benches/: latency.rs  throughput.rs
crates/pulse-bench/src/: lib.rs
crates/pulse-core/: Cargo.toml
crates/pulse-core/src/: channel.rs  lib.rs  message.rs  presence.rs  router.rs
crates/pulse-protocol/: Cargo.toml
crates/pulse-protocol/benches/: codec.rs
crates/pulse-protocol/src/: codec.rs  frames.rs  lib.rs  version.rs
crates/pulse-server/: Cargo.toml
crates/pulse-server/src/: config.rs  handlers.rs  main.rs  metrics.rs
crates/pulse-transport/: Cargo.toml
crates/pulse-transport/src/: fallback.rs  lib.rs  traits.rs  websocket.rs  webtransport.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  DEPLOYMENT.md  PROTOCOL.md
examples/web-client/: README.md  index.html
