[package]
name = "pulse-core"
description = "Core types, traits, and message routing for Pulse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pulse-protocol = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = "1"

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

