[package]
name = "pulse-server"
description = "High-performance realtime communication server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "pulse"
path = "src/main.rs"

[dependencies]
pulse-core = { workspace = true }
pulse-protocol = { workspace = true }
pulse-transport = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = "1"
shellexpand = "3"
futures-util = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

